# short_signed_id

./: Cargo.toml  LICENSE  flake.nix  module.nix
crates/server_app/: Cargo.toml
crates/server_app/src/: main.rs
crates/short_signed_id/: Cargo.toml
crates/short_signed_id/src/: lib.rs
