[package]
name = "server_app"
version = "0.1.0"
edition = "2024"

[dependencies]
rand.workspace = true
rand_core.workspace = true
anyhow.workspace = true
short_signed_id = { path = "../short_signed_id" }
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
